created filters for gdp

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss4/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss8/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -148,10 +148,10 @@
         "colab": {}
       },
       "source": [
-        "filt_total_us = (df_usd['STAGES'] == \"VC_T\") & (df['LOCATION']== \"USA\")\n",
-        "filt_seed_us = (df_usd['STAGES'] == \"SEED\") & (df['LOCATION']== \"USA\")\n",
-        "filt_start_us = (df_usd['STAGES'] == \"START\") & (df['LOCATION']== \"USA\")\n",
-        "filt_later_us = (df_usd['STAGES'] == \"LATER\") & (df['LOCATION']== \"USA\")"
+        "filt_total_us = (df_usd['STAGES'] == \"VC_T\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_seed_us = (df_usd['STAGES'] == \"SEED\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_start_us = (df_usd['STAGES'] == \"START\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_later_us = (df_usd['STAGES'] == \"LATER\") & (df_usd['LOCATION']== \"USA\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -190,6 +190,256 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QdrPA0ctv-bB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Playing with GDP data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u3d_GB5mwGty",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 452
+        },
+        "outputId": "aa85ca71-6acf-46a2-d3ad-a14061636b88"
+      },
+      "source": [
+        "filt_total_us = (df_gdp['STAGES'] == \"VC_T\") & (df_gdp['LOCATION']== \"USA\")\n",
+        "filt_seed_us = (df_gdp['STAGES'] == \"SEED\") & (df_gdp['LOCATION']== \"USA\")\n",
+        "filt_start_us = (df_gdp['STAGES'] == \"START\") & (df_gdp['LOCATION']== \"USA\")\n",
+        "filt_later_us = (df_gdp['STAGES'] == \"LATER\") & (df_gdp['LOCATION']== \"USA\")\n",
+        "df_gdp[filt_total_us]"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>LOCATION</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>STAGES</th>\n",
+              "      <th>MEASURE</th>\n",
+              "      <th>TIME</th>\n",
+              "      <th>Unit Code</th>\n",
+              "      <th>PowerCode Code</th>\n",
+              "      <th>PowerCode</th>\n",
+              "      <th>Value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2254</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2006</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.200720</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2255</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2007</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.238414</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2256</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.242241</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2257</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.177916</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2258</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2010</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.196079</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2259</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2011</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.270818</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2260</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2012</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.236687</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2261</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2013</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.262417</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2262</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.380222</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2263</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.424961</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2264</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2016</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.383715</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2265</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.407736</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2266</th>\n",
+              "      <td>USA</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>SH_GDP</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>PC</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Units</td>\n",
+              "      <td>0.552075</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     LOCATION        Country STAGES  ... PowerCode Code  PowerCode     Value\n",
+              "2254      USA  United States   VC_T  ...              0      Units  0.200720\n",
+              "2255      USA  United States   VC_T  ...              0      Units  0.238414\n",
+              "2256      USA  United States   VC_T  ...              0      Units  0.242241\n",
+              "2257      USA  United States   VC_T  ...              0      Units  0.177916\n",
+              "2258      USA  United States   VC_T  ...              0      Units  0.196079\n",
+              "2259      USA  United States   VC_T  ...              0      Units  0.270818\n",
+              "2260      USA  United States   VC_T  ...              0      Units  0.236687\n",
+              "2261      USA  United States   VC_T  ...              0      Units  0.262417\n",
+              "2262      USA  United States   VC_T  ...              0      Units  0.380222\n",
+              "2263      USA  United States   VC_T  ...              0      Units  0.424961\n",
+              "2264      USA  United States   VC_T  ...              0      Units  0.383715\n",
+              "2265      USA  United States   VC_T  ...              0      Units  0.407736\n",
+              "2266      USA  United States   VC_T  ...              0      Units  0.552075\n",
+              "\n",
+              "[13 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
