took out unnecessary outputs

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/master/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss12/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,8 +66,7 @@
       },
       "source": [
         "vc_path = \"https://raw.githubusercontent.com/csd-oss/vc-investmemt/master/VC_INVEST_06042020205501847.csv\"\n",
-        "df = pd.read_csv(vc_path)\n",
-        "df"
+        "df = pd.read_csv(vc_path)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -90,8 +89,7 @@
         "colab": {}
       },
       "source": [
-        "df = df.drop(columns=[\"Reference Period Code\",\"Reference Period\",\"Flag Codes\",\"Flags\",\"SUBJECT\",\"Measure\",\"Unit\",\"Year\",\"Subject\",\"SUBJECT\",\"Development stages\"])\n",
-        "df"
+        "df = df.drop(columns=[\"Reference Period Code\",\"Reference Period\",\"Flag Codes\",\"Flags\",\"SUBJECT\",\"Measure\",\"Unit\",\"Year\",\"Subject\",\"SUBJECT\",\"Development stages\"])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -176,6 +174,7 @@
       "source": [
         "fig, ax = plt.subplots()\n",
         "plt.style.use(\"ggplot\")\n",
+        "\n",
         "ax.plot(df_usd.loc[filt_total_us].TIME, df_usd.loc[filt_total_us].Value, label = \"Total\")\n",
         "ax.plot(df_usd.loc[filt_seed_us].TIME, df_usd.loc[filt_seed_us].Value, label = \"Seed\")\n",
         "ax.plot(df_usd.loc[filt_start_us].TIME, df_usd.loc[filt_start_us].Value, label = \"Series A\")\n",
@@ -186,6 +185,7 @@
         "ax.set_title(\"USA VC investment\")\n",
         "ax.grid(True)\n",
         "ax.legend()\n",
+        "\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -227,6 +227,7 @@
       "source": [
         "fig, ax = plt.subplots()\n",
         "plt.style.use(\"ggplot\")\n",
+        "\n",
         "ax.plot(df_gdp.loc[filt_total_us].TIME, df_gdp.loc[filt_total_us].Value, label = \"Total\")\n",
         "ax.plot(df_gdp.loc[filt_seed_us].TIME, df_gdp.loc[filt_seed_us].Value, label = \"Seed\")\n",
         "ax.plot(df_gdp.loc[filt_start_us].TIME, df_gdp.loc[filt_start_us].Value, label = \"Series A\")\n",
@@ -237,6 +238,7 @@
         "ax.set_title(\"USA VC investment\")\n",
         "ax.grid(True)\n",
         "ax.legend()\n",
+        "\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -311,9 +313,11 @@
       "metadata": {
         "id": "1DgU_CoSHTGI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "filt_total_2018 = (df_usd['TIME']==2018)&(df_usd['STAGES']=='VC_T') \n",
         "filt_other = df_usd['Value'] > 2185.094678\n",
         "pie_2018 = df_usd[filt_total_2018 & filt_other]\n",
